packages/code/widget/widget_icon.css
.widget-icon-icon {
    padding-top: 4px;
    min-width:76px;
    margin-left:10px;
    margin-right:0px;
    float:left;
    text-align: center;
}

.widget-icon-icon:hover:active {
    font-weight: bold;
}

.widget-icon-icon+.widget-icon-icon
{
    margin-left:0px;
}

.widget-icon-list+.widget-icon-list
{
    margin-left:0px;
}

.widget-icon-list {
    min-width:150px;
    position:relative;
    float:left;
    top: 12px;
    overflow: hidden; 
    text-overflow: ellipsis;
    white-space: nowrap;
}

.widget-icon-image-icon {
    pointer-events:none;
    object-fit: none;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.widget-icon-image-list {
    object-fit: none;
    position:relative;
    margin-left:3px;
    margin-top:3px;
}

.widget-icon-label-icon {
    margin-bottom:2px;
    font-family: "MS Sans Serif";
    font-size: 16px;
    user-select: none;
}

.widget-icon-label-list {
    position: absolute;
    left:25px;
    top:4px;
    font-family: "MS Sans Serif";
    font-size: 13px;
    user-select: none;
}

